--- a/media/css/style.css
+++ b/media/css/style.css
@@ -4,6 +4,7 @@ body { padding-top: 70px; }
 	display: none;
 	position: absolute;
 	border: 1px solid #C0C0C0;
+	z-index: 10000;
 }
 
 #resultcomplete .item {
